[sass] fix wrong position of Drawer nav

--- a/source/styles/components/_Drawer.scss
+++ b/source/styles/components/_Drawer.scss
@@ -32,7 +32,7 @@ $padding: ekzo-space();
 .Drawer {
   padding: $padding;
 
-  margin-top: -(ekzo-space(2) + $padding);
+  margin-top: -(ekzo-space() + $padding);
   z-index: -1;
 }
 
